--- a/package.json
+++ b/package.json
@@ -5,19 +5,32 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "axios": "^0.21.1",
+    "babel-plugin-styled-components": "^1.12.0",
+    "dotenv": "^10.0.0",
+    "formik": "^2.2.9",
     "gatsby": "^3.6.2",
+    "gatsby-plugin-canonical-urls": "^3.6.0",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^3.6.0",
+    "gatsby-plugin-nprogress": "^3.6.0",
     "gatsby-plugin-offline": "^4.6.0",
     "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-plugin-sitemap": "^4.2.0",
+    "gatsby-plugin-styled-components": "^4.6.0",
     "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-source-graphql": "^3.6.0",
     "gatsby-transformer-sharp": "^3.6.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-google-recaptcha": "^2.1.0",
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.3.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "prettier": "2.2.1"
