--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/eslint-parser": "^7.14.4",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "axios": "^0.21.1",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^1.12.0",
     "dotenv": "^10.0.0",
     "formik": "^2.2.9",
@@ -14,15 +19,20 @@
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^3.6.0",
+    "gatsby-plugin-mdx": "^2.6.0",
     "gatsby-plugin-nprogress": "^3.6.0",
     "gatsby-plugin-offline": "^4.6.0",
+    "gatsby-plugin-page-creator": "^3.6.0",
     "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-sharp": "^3.6.0",
     "gatsby-plugin-sitemap": "^4.2.0",
     "gatsby-plugin-styled-components": "^4.6.0",
+    "gatsby-remark-images": "^5.3.0",
     "gatsby-source-filesystem": "^3.6.0",
     "gatsby-source-graphql": "^3.6.0",
     "gatsby-transformer-sharp": "^3.6.0",
+    "graphql": "^15.5.0",
+    "postcss": "^8.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -30,6 +40,8 @@
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.3.0",
+    "trim": "^1.0.1",
+    "typescript": "^4.3.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
