added syntax highlight feature for codeblocks in mdx

--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "gatsby-source-graphql": "^3.6.0",
     "gatsby-transformer-sharp": "^3.6.0",
     "graphql": "^15.5.0",
+    "mdx-utils": "^0.2.0",
     "postcss": "^8.3.0",
+    "prism-react-renderer": "^1.2.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
