--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^17.0.1",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
+    "react-use": "^17.2.4",
     "styled-components": "^5.3.0",
     "trim": "^1.0.1",
     "typescript": "^4.3.2",
