--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^3.6.2",
     "gatsby-plugin-canonical-urls": "^3.6.0",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
+    "gatsby-plugin-google-tagmanager": "^3.9.0",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^3.6.0",
     "gatsby-plugin-mdx": "^2.6.0",
