--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.2.9",
     "gatsby": "^3.6.2",
     "gatsby-plugin-canonical-urls": "^3.6.0",
+    "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
     "gatsby-plugin-google-tagmanager": "^3.9.0",
     "gatsby-plugin-image": "^1.6.0",
