--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "gatsby-starter-default",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A personal blogging and documenting website",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Varun Srivatsa <varunsrivatsa27@gmail.com>",
   "dependencies": {
     "@babel/core": "^7.14.3",
     "@babel/eslint-parser": "^7.14.4",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "axios": "^0.21.4",
-    "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^1.12.0",
     "dotenv": "^10.0.0",
     "formik": "^2.2.9",
-    "gatsby": "^3.14.2",
+    "gatsby": "^3.13.1",
     "gatsby-plugin-canonical-urls": "^3.6.0",
     "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
@@ -39,9 +38,7 @@
     "prism-react-renderer": "^1.2.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.1",
-    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-use": "^17.2.4",
     "styled-components": "^5.3.0",
