--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "formik": "^2.2.9",
     "gatsby": "^3.14.2",
+    "gatsby-cli": "^4.1.0",
     "gatsby-plugin-canonical-urls": "^3.6.0",
     "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-gatsby-cloud": "^2.6.1",
